# meshtastic-matrix-relay

./: .bandit  .coderabbit.yml  .coveragerc  .dockerignore  .env  .gitignore  ANNOUNCEMENT.md  ARMv7_PYZ_BUILD_ANALYSIS.md  CHANGELOG.md  CONNECTION_HANDLING_ANALYSIS.md  DEVELOPMENT.md  DOCKER-SETUP.md  DOCKER.md  DOCKER_AUTOMATION_SETUP.md  Dockerfile  E2EE_IMPLEMENTATION_NOTES.md  E2EE_TROUBLESHOOTING.md  INSTRUCTIONS.md  LICENSE  MANIFEST.in  Makefile  PLUGIN_FIX_FOR_PANBOCZEK.md  README.md  README_TEST_COVERAGE.md  UPGRADE_TO_V1.md  cleanup-test-images.md  cli.py  codecov.yml  config.py  config_editor.py  db_utils.py  debug_e2ee.py  docker-compose.yaml  docker-compose.yml  docker-config.yaml  docker-entrypoint.sh  log_utils.py  main.py  map.py  matrix.py  (+24 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-armv7-builder-image.yml  build-pyz-armv7.yml  build-windows-exe.yml  check-upstream-releases.yml  cleanup-container-registry.yml  docker-build.yml  docker-publish.yml  main.yml  package-windows.yml  post-release-version-bump-pr.yml  pypi-publish.yml  pypy-publish.yml  shiv-publish.yml  test-and-coverage.yml  trigger-docker-build.yml
.trunk/: trunk  trunk.yaml
docs/: ANNOUNCEMENT.md  CONSTANTS.md  DOCKER.md  E2EE.md  EXTRA_CONFIGURATION.md  INSTRUCTIONS.md  PLUGINS.md  README.md  UPGRADE_TO_V1.md  component-debug-logging.md
docs/dev/: E2EE_IMPLEMENTATION_NOTES.md
example_plugins/: README.md  battery_level.py  hello_world.py  mesh_relay_plugin.py  ping.py  relay_plugin.py
gui/: config_editor.py
plugins/: base_plugin.py  battery_level.py  drop_plugin.py  health_plugin.py  help_plugin.py  map_plugin.py  mesh_relay_plugin.py  nodes_plugin.py  ping.py  ping_plugin.py  sample_plugin.py  telemetry.py  telemetry_plugin.py  weather_plugin.py
scripts/: bump_version.py  cleanup-dangling-tags.sh  generate-docker-compose.py  mmrelay.iss  test-docker-build.sh
src/mmrelay/: __init__.py  check_config.py  check_config_cmd.py  cli.py  config.py  config_checker.py  db_utils.py  log_utils.py  main.py  matrix_utils.py  meshtastic_utils.py  message_queue.py  plugin_loader.py  setup_utils.py
src/mmrelay/constants/: __init__.py  app.py  config.py  database.py  formats.py  messages.py  network.py  queue.py
src/mmrelay/plugins/: __init__.py  base_plugin.py  debug_plugin.py  drop_plugin.py  health_plugin.py  help_plugin.py  map_plugin.py  mesh_relay_plugin.py  nodes_plugin.py  ping_plugin.py  (+2 more)
tests/: __init__.py  conftest.py  constants.py  test_async_patterns.py  test_base_plugin.py  test_cli.py  test_cli_edge_cases.py  test_config.py  test_config_checker.py  test_config_edge_cases.py  test_constants.py  test_db_utils.py  test_db_utils_edge_cases.py  test_debug_plugin.py  test_detection_sensor.py  test_drop_plugin.py  test_e2ee_encryption.py  test_e2ee_integration.py  test_e2ee_runner.py  test_error_boundaries.py  test_health_plugin.py  test_help_plugin.py  test_imports.py  test_integration_scenarios.py  test_log_utils.py  test_main.py  test_map_plugin.py  test_matrix_utils.py  test_matrix_utils_edge_cases.py  test_mesh_relay_plugin.py  test_meshtastic_utils.py  test_meshtastic_utils_edge_cases.py  test_message_queue.py  test_message_queue_edge_cases.py  test_network_reliability.py  test_nodes_plugin.py  test_performance_stress.py  test_ping_plugin.py  test_plugin_loader.py  test_plugin_loader_edge_cases.py  (+5 more)
tools/: mmrelay.service
utils/: config_editor.py
(+7 files in other folders)
