[metadata]
name = mmrelay
version = 1.0.1
author = Geoff Whittington, Jeremiah K., and contributors
author_email = jeremiahk@gmx.com
description = Bridge between Meshtastic mesh networks and Matrix chat rooms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/geoffwhittington/meshtastic-matrix-relay
project_urls =
    Bug Tracker = https://github.com/geoffwhittington/meshtastic-matrix-relay/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Communications

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    meshtastic
    Pillow==11.2.1
    matrix-nio==0.25.2
    matplotlib==3.10.1
    requests==2.32.3
    markdown==3.8
    haversine==2.9.0
    schedule==1.2.2
    platformdirs==4.3.7
    py-staticmaps>=0.4.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mmrelay = mmrelay.cli:main
